--- a/branches/wince/navit/configure.in
+++ b/branches/wince/navit/configure.in
@@ -482,11 +482,13 @@ navit/graphics/gtk_drawing_area/Makefile
 navit/graphics/opengl/Makefile
 navit/graphics/null/Makefile
 navit/graphics/qt_qpainter/Makefile
+navit/graphics/win32/Makefile
 navit/gui/Makefile
 navit/gui/gtk/Makefile
 navit/gui/internal/Makefile
 navit/gui/sdl/Makefile
 navit/gui/sdl/datafiles/Makefile
+navit/gui/win32/Makefile
 navit/osd/Makefile
 navit/osd/core/Makefile
 navit/speech/Makefile
